fixed title from getting cut off

--- a/src/PanLexAppBar.css
+++ b/src/PanLexAppBar.css
@@ -25,6 +25,7 @@
 
 #title {
     margin-inline-start: 12px;
+    overflow: visible;
 }
 
 #don-container {
